# CrazySLAM

./: .gitignore  README.md  control.py  crazyflie_environment.yml  fly_and_log.py  pyproject.toml  setup.py  test_mapping.py  utils.py
crazyslam/: control.py  fly_and_log.py  localization.py  logger.py  logging.py  mapping.py  slam.py  utils.py
examples/: sim_controller.py  sim_localizer.py  sim_logger.py  sim_mapper.py  sim_slam.py
notebooks/: mapping_coursera.py
tests/: test_localization.py  test_mapping.py
