[tool.poetry]
name = "CrazySLAM"
version = "0.1.0"
description = "SLAM algorithm implemented on a Crazyflie"
authors = ["Ali Benkassou <a.benkassou1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
scikit-image = "^0.16.2"
numpy = "^1.18.1"
tqdm = "^4.43.0"
scipy = "^1.4.1"
matplotlib = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pylint = "^2.4.4"
pytest-cov = "^2.8.1"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
